--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <section class="h-100 gradient-form" style="background-color: #eee">
+  <section class="h-100 gradient-form" style="background-color: #b8e0cd">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-xl-10">
@@ -26,8 +26,8 @@
             <div class="row g-0">
               <div class="card-body p-md-5 mx-md-4">
                 <div class="text-center">
-                  <img src="img/images/map_leaflet_example.png" style="width: 185px" alt="logo" />
-                  <h4 class="mt-1 mb-5 pb-1">We are The Wiki-Wiki-MAp!</h4>
+                  <img src="assets/img/portfolio/Screen Shot 2022-09-28 at 9.17.32 PM.png" style="width: 185px" alt="logo" />
+                  <h4 class="mt-1 mb-5 pb-1">Welcome to The Wiki-Map!</h4>
                 </div>
 
                 <form action="/index" method="POST">
@@ -44,7 +44,7 @@
                   </div>
 
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">
+                    <button class="btn btn-info" type="submit">
                       Log in
                     </button>
                   </div>
@@ -52,7 +52,7 @@
                 <form action="/register" method="GET">
                   <div class="d-flex align-items-center justify-content-center pb-4">
                     <p class="mb-0 me-2">Don't have an account?</p>
-                    <button type="submit" class="btn btn-outline-danger">
+                    <button type="submit" class="btn btn-outline-info">
                       Create new
                     </button>
                   </div>
