--- a/views/map_landing.ejs
+++ b/views/map_landing.ejs
@@ -154,10 +154,10 @@
               <img src="assets/img/portfolio/toronto.jpg" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
-                  Launch static backdrop modal
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop1">
+                  Open Map
                 </button>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
           </div>
@@ -167,10 +167,10 @@
               <img src="assets/img/portfolio/montreal.jpg" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
-                  Launch static backdrop modal
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
+                  Open Map
                 </button>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
           </div>
@@ -180,10 +180,10 @@
               <img src="assets/img/portfolio/vancouver.jpg" class="img-fluid" alt="" />
               <div class="portfolio-links">
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
-                  Launch static backdrop modal
+                <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">
+                  Open Map
                 </button>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
           </div>
@@ -191,7 +191,7 @@
     </section>
     <!-- End Portfolio Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section =======
     <section id="contact" class="contact">
       <div class="container">
         <div class="section-title">
@@ -217,7 +217,7 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
-                  <!-- Example single danger button -->
+                   Example single danger button
                   <div class="btn-group">
                     <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
                       aria-haspopup="true" aria-expanded="false">
@@ -258,7 +258,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- End Contact Section -->
   </main>
   <!-- End #main -->
