--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,8 +26,8 @@
             <div class="row g-0">
               <div class="card-body p-md-5 mx-md-4">
                 <div class="text-center">
-                  <img src="img/images/map_leaflet_example.png" style="width: 185px" alt="logo" />
-                  <h4 class="mt-1 mb-5 pb-1">We are The Wiki-MAp!</h4>
+                  <img src="assets/img/portfolio/Screen Shot 2022-09-28 at 9.17.32 PM.png" style="width: 185px" alt="logo" />
+                  <h4 class="mt-1 mb-5 pb-1">Welcome to The Wiki-Map!</h4>
                 </div>
 
                 <form action="/register" method="POST">
@@ -44,7 +44,7 @@
                   </div>
 
                   <div class="text-center pt-1 mb-5 pb-1">
-                    <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3" type="submit">
+                    <button class="btn btn-info" type="submit">
                       Register
                     </button>
                   </div>
